# NDT-variants

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  ndt.cpp  setDotEnv.sh  voxel_grid_filter.cpp
app/: ndt.cpp
data/: bunny.pcd
include/ndt_variants/: d2d_ndt.h
include/ndt_variants/impl/: d2d_ndt.hpp
sample/: mrpt.cpp  ndt.cpp  visualize_vgc.cpp
src/: d2d_ndt.cpp
